2007-04-11  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: IRC channel is on OFTC

2007-04-10  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/ophelp.c: if userspace doesn't recognize the cpu type
	  warn the user it can use timer mode or upgrade oprofile.

2007-04-04  Maynard johnson <maynardj@us.ibm.com>

	* libutil++/file_manip.cpp: catch result from chown() to avoid
	  compilation warning (treated as error)

2007-03-23  Jason Yeh  <jason.yeh@amd.com>

	* events/Makefile.am:
	* events/x86-64/family10/events:
	* events/x86-64/family10/unit_masks:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/ophelp.c: Add AMD Family 10 support.
	
2007-02-28  Rob Bradford  <rob@o-hand.com>

	* pp/oparchive.cpp: return from main

2007-02-21  Rob Bradford <rob@o-hand.com>

	Reverted previous patches.
	* pp/oparchive.cpp: Save debuginfo files in .debug sub directory.

	* pp/oparchive.cpp:
	* pp/oparchive_options.h:
	* pp/oparchive_options.cpp: List files option.

2007-02-21  Rob Bradford <rob@o-hand.com>

	* pp/oparchive.cpp: Save debuginfo files in .debug sub directory.

	* pp/oparchive.cpp:
	* pp/oparchive_options.h:
	* pp/oparchive_options.cpp: List files option.

2007-02-16  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_mangling.c: missing initialisation when mangling an 
	  anon and callgraph filename. Fix given by Amitabha Roy.

2007-02-06  Dave Nomura <dcnltc@us.ibm.com>

	* libpp/symbol.h:
	* libutil++/Makefile.am:
	* libutil++/sparse_array.h: represent count_array_t as a sparse 
	  array type based on std::map rather than growable_vector which is
	  based on std::vector to reduce the excessive heap usage on large
	  profiles.

2007-02-02  Amitabha Roy  <amitabha.roy@gmail.com>

	* daemon/opd_anon.c:
	* daemon/opd_anon.h:
	* daemon/opd_mangling.c:
	* libop/op_mangle.c:
	* libop/op_mangle.h:
	* libpp/parse_filename.cpp: save and report name of anonymous
	  mapping if there is one (as self-contradictory as that
	  sounds).
